--- a/.github/workflows/test_all.yaml
+++ b/.github/workflows/test_all.yaml
@@ -1,10 +1,14 @@
 name: "Test CLI & Server"
 
-on: [ push ]
-  
+on:
+  pull_request:
+    branches:
+      - master
+
 jobs:
-  runs_on: ubuntu:latest
-  build_images:
-    name: build_images
-    
-  
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build the Docker Images
+        run: make compose-build
