--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -2,8 +2,11 @@ site_name: Fides
 site_url: https://example.com/
 nav:
   - Home: index.md
-  - CLI: cli.md
-  - Server: server.md
+  - License: license.md
+  - Getting Started: getting_started.md
   - Glossary: glossary.md
+  - Fidesctl: cli.md
+  - Fides Server: server.md
+  - Deployment: deployment.md
   - Contributing: contributing.md
 theme: readthedocs
