--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - License: license.md
   - Getting Started: getting_started.md
   - Glossary: glossary.md
+  - Tutorial: tutorial.md
   - Fidesctl: cli.md
   - Fides Server: server.md
   - Deployment: deployment.md
