Flesh out the MkDocs (#13)
* Flesh out the MkDocs

* added a ton to the docs

* flesh out the docs more

* further docs updates

* clean up more documentation/commands on the CLI

* remove docs docker stuff, more build-out for the example

* finish building out the example

* minor tweaks

* add docs/site to the gitignore

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -2,8 +2,12 @@ site_name: Fides
 site_url: https://example.com/
 nav:
   - Home: index.md
-  - CLI: cli.md
-  - Server: server.md
+  - License: license.md
+  - Getting Started: getting_started.md
+  - Tutorial: tutorial.md
   - Glossary: glossary.md
+  - Fidesctl: fidesctl.md
+  - Fides Server: server.md
+  - Deployment: deployment.md
   - Contributing: contributing.md
 theme: readthedocs
