fixed the checks for the CLI

--- a/fides_cli/mypy.ini
+++ b/fides_cli/mypy.ini
@@ -1,4 +1,3 @@
-
 [mypy] 
 files = src/**/**.py
 warn_unused_configs = true
@@ -8,6 +7,9 @@ plugins = pydantic.mypy
 disallow_any_explicit = true
 disallow_untyped_defs = true
 
-[mypy-src.fides.core.models]
+[mypy-src.fidesctl.core.models]
 # Got an error saying BaseModel was explicit type Any
 disallow_any_explicit = false 
+
+[mypy-src.fidesctl._version]
+ignore_errors = true
