Add Versioneer to Fidesctl (#18)
* Add Versioneer to Fidesctl

* added versioneer scaffolding

* rename some things

* add the version check

* fixed the checks for the CLI

--- a/fides_cli/pyproject.toml
+++ b/fides_cli/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel"]  # PEP 508 specifications.
+requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.
 
 ######
 # MyPy
@@ -66,7 +66,8 @@ good-names="_,i,j,k,e,qs,pk,setUp,tearDown,maxDiff,default_app_config"
 [tool.pytest.ini_options]
 testpaths="tests"
 log_level = "DEBUG"
-addopts = ["--cov=fides",
+addopts = ["--cov=fidesctl.core",
+            "--cov=fidesctl.cli",
             "--cov-report=term-missing",
             "-vv",
             "--no-cov-on-fail",
