--- a/fides_cli/MANIFEST.in
+++ b/fides_cli/MANIFEST.in
@@ -2,4 +2,4 @@ include LICENSE
 include requirements.txt
 include dev-requirements.txt
 include versioneer.py
-include src/fides/_version.py
+include src/fidesctl/_version.py
