--- a/fides_cli/setup.cfg
+++ b/fides_cli/setup.cfg
@@ -1,7 +1,7 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = src/fides/_version.py
+versionfile_source = src/fidesctl/_version.py
 versionfile_build = fides_cli/_version.py
 tag_prefix =
 parentdir_prefix =
