--- a/fidesctl/setup.cfg
+++ b/fidesctl/setup.cfg
@@ -2,6 +2,6 @@
 VCS = git
 style = pep440
 versionfile_source = src/fidesctl/_version.py
-versionfile_build = fides_cli/_version.py
+versionfile_build = fidesctl/_version.py
 tag_prefix =
 parentdir_prefix =
