--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - Getting Started: getting_started.md
   - Tutorial: tutorial.md
   - Glossary: glossary.md
+  - Manifests: manifests.md
   - Fidesctl: fidesctl.md
   - Fides Server: server.md
   - Deployment: deployment.md
