--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -24,9 +24,16 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.highlight:
       linenums: true
+      linenums_style: table
   - pymdownx.inlinehilite
+  - pymdownx.tabbed
 
 # theme: material
 #   - features:
 #     - navigation.instant
 #     - navigation.tabs
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js
+  - javascripts/config.js
+extra_css:
+  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
