--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -15,8 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Log In
-        run: make docker-login
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKER_USER }}
+          password: ${{ env.DOCKER_TOKEN }}
 
       - name: Build & Push the Server
         run: make server-push
@@ -26,8 +29,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Log In
-        run: make docker-login
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKER_USER }}
+          password: ${{ env.DOCKER_TOKEN }}
 
       - name: Build & Push the CLI
         run: make cli-push
