--- a/fidesctl/requirements.txt
+++ b/fidesctl/requirements.txt
@@ -1,6 +1,8 @@
 click==7.1.2
 colorama==0.4.4
-mysql-connector-python==8.0.24
+configparser==5.0.2
+mysql-connector-python==8.0.
+PyJWT==2.1.0
 psycopg2-binary==2.8.6
 pydantic==1.8.2
 pyyaml==5.4.1
