--- a/fides-server/src/main/resources/reference.conf
+++ b/fides-server/src/main/resources/reference.conf
@@ -4,7 +4,7 @@ fides.file.upload.max.bytes=3145728
 fides.db.jdbc.url="jdbc:mysql://localhost:3306/devtools"
 fides.db.jdbc.user=dpcp
 fides.db.jdbc.password=dpcp
-fides.db.driver=com.mysql.jdbc.Driver
+fides.db.driver=com.mysql.cj.jdbc.Driver
 
 #optional values
 fides.db.jdbc.minPoolSize=5
