added basic jwt token to api

--- a/fidesctl/requirements.txt
+++ b/fidesctl/requirements.txt
@@ -1,7 +1,6 @@
 click==7.1.2
 colorama==0.4.4
-configparser==5.0.2
-mysql-connector-python==8.0.
+mysql-connector-python==8.0.24
 PyJWT==2.1.0
 psycopg2-binary==2.8.6
 pydantic==1.8.2
