--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -10,10 +10,15 @@ nav:
   - Fidesctl: fidesctl.md
   - FidesAPI: api.md
   - Development:
-      - Contributing: contributing.md
+      - Overview: development/overview.md
+      - Contributing: development/contributing.md
+      - Code Style: development/code_style.md
+      - Documentation: development/documentation.md
+      - Testing: development/testing.md
+      - Release Checklist: development/release_checklist.md
   - Community:
-      - GitHub: github.md
-      - Code of Conduct: code_of_conduct.md
+      - GitHub: community/github.md
+      - Code of Conduct: community/code_of_conduct.md
 theme:
   name: material
   favicon: img/favicon.png
