--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -5,8 +5,8 @@ nav:
   - License: license.md
   - Fides Objects: fides_objects.md
   - Getting Started:
-      - getting_started/docker_getting_started.md
-      - getting_started/local_getting_started.md
+      - getting_started/docker.md
+      - getting_started/local.md
   - Tutorial: tutorial.md
   - Deployment: deployment.md
   - Fidesctl: fidesctl.md
