--- a/fidesctl/data/sample/example_objects.yaml
+++ b/fidesctl/data/sample/example_objects.yaml
@@ -61,7 +61,7 @@ dataset:
     datasetType: "MySQL"
     location: "US East"
     fields:
-      - name: "First Name"
+      - name: "First_Name"
         description: "A First Name Field"
         path: "sample_db_dataset.first_name"
         dataCategories:
@@ -73,7 +73,7 @@ dataset:
         dataCategories:
           - "account_data"
         dataQualifier: "identified_data"
-      - name: "Food Preference"
+      - name: "Food_Preference"
         description: "User's favorite food"
         path: "sample_db_dataset.food_preference"
 
@@ -92,5 +92,5 @@ system:
         dataSubjects:
           - "anonymous_user"
         datasetReferences:
-          - "sample_db_dataset"
+          - "10"
     systemDependencies: []
