--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get install -y \
 RUN pip install -U pip
 COPY requirements.txt requirements.txt
 COPY dev-requirements.txt dev-requirements.txt
+COPY tests/.fides.conf.example .fides.conf
 RUN pip install -r requirements.txt
 RUN pip install -r dev-requirements.txt
 
