--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -14,10 +14,11 @@ nav:
   - Development:
       - Overview: development/overview.md
       - Contributing: development/contributing.md
+      - Pull Requests: development/pull_requests.md
       - Code Style: development/code_style.md
       - Documentation: development/documentation.md
       - Testing: development/testing.md
-      - Release Checklist: development/release_checklist.md
+      - Releases: development/releases.md
   - Community:
       - GitHub: community/github.md
       - Code of Conduct: community/code_of_conduct.md
