--- a/fidesctl/data/sample/example_objects.yaml
+++ b/fidesctl/data/sample/example_objects.yaml
@@ -72,7 +72,7 @@ dataset:
         path: "sample_db_dataset.email"
         dataCategories:
           - "account_data"
-        dataQualifier: "identified_data"
+        dataQualifier: "anonymized_data"
       - name: "Food_Preference"
         description: "User's favorite food"
         path: "sample_db_dataset.food_preference"
@@ -86,11 +86,11 @@ system:
     privacyDeclarations:
       - name: "Analyze Anonymous Content"
         dataCategories:
-          - "customer_content_data"
+          - "account_data"
         dataUse: "provide"
         dataQualifier: "anonymized_data"
         dataSubjects:
           - "anonymous_user"
         datasetReferences:
-          - "sample_db_dataset"
+          - "sample_db_dataset.Email"
     systemDependencies: []
