--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -3,7 +3,9 @@ site_url: https://example.com/
 nav:
   - Home: index.md
   - License: license.md
-  - Fides Objects: fides_objects.md
+  - Fides Objects:
+    - Object Types: fides_objects/object_types.md
+    - Privacy Types In Depth: fides_objects/privacy_taxonomy.md
   - Getting Started:
       - getting_started/docker.md
       - getting_started/local.md
