--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -5,7 +5,7 @@ nav:
   - License: license.md
   - Fides Objects:
     - Object Types: fides_objects/object_types.md
-    - Privacy Types In Depth: fides_objects/privacy_taxonomy.md
+    - Default Privacy Values: fides_objects/privacy_taxonomy.md
   - Getting Started:
       - getting_started/docker.md
       - getting_started/local.md
